pre-assessment changes

--- a/app/views/apps/_assessment_2205/views/beis/dashboard.html
+++ b/app/views/apps/_assessment_2205/views/beis/dashboard.html
@@ -4,7 +4,7 @@
   <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
           <div class="hgroup">
-            <h1 class="govuk-heading-xl">Report on ODA activity and financial data</h1>
+            <h1 class="govuk-heading-xl">Report ODA activity and financial data</h1>
             <!-- <p class="govuk-body">Use this page to navigate towards tasks you need to complete.</p> -->
           </div>
     </div>
@@ -13,11 +13,11 @@
    <div class="govuk-grid-row">
      <div class="govuk-grid-column-two-thirds">
        <section>
-       <h2 class="govuk-heading-m"><a href="trackers/index"><span class="sr-only">View all</span>Trackers</a></h2>
-       <p class="govuk-body">View tracker submission status and review data quality.</p>
+       <h2 class="govuk-heading-m"><a href="trackers/index"><span class="sr-only">View all</span>Submissions</a></h2>
+       <p class="govuk-body">View the status of submissions and review data quality.</p>
        </section>
        <section>
-       <h2 class="govuk-heading-m"><a href="reporting">Reporting</a></h2>
+       <h2 class="govuk-heading-m"><a href="reporting">Reports</a></h2>
        <p class="govuk-body">Run a selection of standard reports or create your own.</p>
        </section>
      </div>
@@ -25,9 +25,9 @@
        <h3 class="govuk-heading-m">To do list</h3>
        <p class="govuk-body">Actions reported by the service that need your attention.</p>
        <ol class="govuk-list govuk-list--number">
-         <li><a href="#">Review new tracker</a></li>
-         <li><a href="#">Review project changes</a></li>
-         <li><a href="#">Chase missing trackers</a></li>
+         <!-- <li><a href="#">Review new submissions</a></li> -->
+         <li><a href="#">Review activity changes</a></li>
+         <li><a href="#">Chase missing submissions</a></li>
        </ol>
      </div>
    </div>
