--- a/app/views/apps/_assessment_2205/views/beis/reporting/index.html
+++ b/app/views/apps/_assessment_2205/views/beis/reporting/index.html
@@ -4,10 +4,10 @@
 <a href="#" class="govuk-back-link">Back</a>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Reporting</h1>
+    <h1 class="govuk-heading-xl">Reports</h1>
     <p class="govuk-body-lead">Run, create, edit and share ODA reports.</p>
     <section id="standardReports">
-      <h2 class="govuk-heading-m">Standard reports</h2>
+      <h2 class="govuk-heading-l">Standard reports</h2>
       <table class="govuk-table" id="trackerReviewTable">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -20,30 +20,32 @@
           <tr class="govuk-table__row">
             <td class="govuk-table__header" scope="row"><abbr title="International Aid Transparency Initiative">IATI</abbr> transparency report</td>
             <td class="govuk-table__cell">24 May 2019</td>
-            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-transparency.herokuapp.com/">Open</a></td>
+            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-transparency.herokuapp.com/">View report</a></td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__header" scope="row">Quarterly forecast by location</td>
             <td class="govuk-table__cell">24 May 2019</td>
-            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-filtering.herokuapp.com/dashboard">Open</a></td>
+            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-filtering.herokuapp.com/report">View report</a></td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__header" scope="row">Budget deficit report</td>
             <td class="govuk-table__cell">24 May 2019</td>
-            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-filtering.herokuapp.com/dashboard">Open</a></td>
+            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-filtering.herokuapp.com/report">View report</a></td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__header" scope="row">Annual report</td>
             <td class="govuk-table__cell">24 May 2019</td>
-            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-filtering.herokuapp.com/dashboard">Open</a></td>
+            <td class="govuk-table__cell"><a href="https://beis-odart-alpha-filtering.herokuapp.com/report">View report</a></td>
           </tr>
         </tbody>
       </table>
     </section>
+    <br>
     <section id="customReports">
-      <h2 class="govuk-heading-m">Custom reports</h2>
-      <p class="govuk-body">User generated reports you can create, run and customise</p>
-      <a href="https://beis-odart-alpha-filtering.herokuapp.com/filter" class="govuk-button">Create a report</a>
+      <h2 class="govuk-heading-l">Custom reports</h2>
+      <p class="govuk-body">Create, run and customise a report</p>
+      <a href="https://beis-odart-alpha-filtering.herokuapp.com/filter" class="govuk-button">Create a new report</a>
+      <h3 class="govuk-heading-m">Existing custom reports</h3>
       <table class="govuk-table" id="trackerReviewTable">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
