--- a/app/views/apps/_assessment_2205/views/beis/trackers/index.html
+++ b/app/views/apps/_assessment_2205/views/beis/trackers/index.html
@@ -8,7 +8,7 @@
           Academy of Medical Sciences
         </h1>
         <div class="govuk-panel__body">
-          Financial tracker sent to BEIS analyst for QA.
+          Financial sent to BEIS analyst.
         </div>
       </div>
 
@@ -16,8 +16,8 @@
       <div class="govuk-grid-column-two-thirds">
 <a href="#" class="govuk-back-link">Back</a>
           <div class="hgroup">
-            <h1 class="govuk-heading-xl">Trackers</h1>
-            <p class="govuk-body">View tracker submission status and review data quality.</p>
+            <h1 class="govuk-heading-xl">Submissions</h1>
+            <p class="govuk-body">View status of submissions and review data quality.</p>
           </div>
     </div>
    </div>
@@ -27,7 +27,7 @@
        <div class="govuk-heading-m">28 Jun 2019</div>
      </div>
      <div class="govuk-grid-column-two-thirds">
-       <h3 class="govuk-heading-s">Filter trackers</h3>
+       <h3 class="govuk-heading-s">Filter submissions</h3>
 <form>
   <fieldset class="govuk-fieldset">
     <div class="govuk-grid-row">
@@ -69,8 +69,8 @@
    <div class="govuk-grid-row">
      <div class="govuk-grid-column-one-third">
        <div class="panel-blue">
-          <div class="govuk-caption-m">Trackers submitted this period</div>
-          <div class="govuk-heading-l"><span>34</span> of <span>36</span></div>
+          <div class="govuk-caption-m">Submissions outstanding</div>
+          <div class="govuk-heading-l">2</div>
        </div>
      </div>
      <div class="govuk-grid-column-one-third">
