--- a/app/views/apps/_assessment_2205/views/beis/trackers/tracker/index.html
+++ b/app/views/apps/_assessment_2205/views/beis/trackers/tracker/index.html
@@ -4,10 +4,10 @@
 
   <div class="govuk-grid-row">
   <aside class="govuk-grid-column-one-third aside">
-    <a href="#" class="govuk-back-link">Back to all trackers</a>
+    <a href="#" class="govuk-back-link">Back to all submissions</a>
 
-    <h3 class="govuk-heading-s">Tracker actions</h3>
-    <a href="complete-review" href="#1" class="govuk-button govuk-button--secondary">Return to delivery partner</a>
+    <h3 class="govuk-heading-s">Submission actions</h3>
+    <!-- <a href="complete-review" href="#1" class="govuk-button govuk-button--secondary">Return to delivery partner</a> -->
 <a href="complete-review" class="govuk-button">Complete review</a>
 
     <div class="related">
@@ -114,7 +114,7 @@
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="organisation-4" name="organisation" type="checkbox" value="DfT">
                   <label class="govuk-label govuk-checkboxes__label" for="organisation-4">
-                    Activity (h3)
+                    Sub-activity (h3)
                   </label> </div>
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="organisation-4" name="organisation" type="checkbox" value="DfT">
@@ -139,20 +139,20 @@
 
   <div class="govuk-grid-column-two-thirds main">
     <span class="govuk-caption-xl">Academy of Medical Sciences	</span>
-    <h1 class="govuk-heading-xl">Review activities</h1>
+    <h1 class="govuk-heading-xl">Review submission</h1>
     <p class="govuk-body-lead">Review and approve the data submitted by the delivery partner.</p>
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-third">
         <div class="panel-grey">
           <div class="govuk-caption-m">Total spend</div>
-          <div class="govuk-heading-l">£47,850</div>
+          <div class="govuk-heading-l">£147,850</div>
         </div>
       </div>
       <div class="govuk-grid-column-one-third">
         <div class="panel-grey">
           <div class="govuk-caption-m">Activity budget</div>
-          <div class="govuk-heading-l"><span>-</span>£3,560,000</div>
+          <div class="govuk-heading-l">£3,560,000</div>
         </div>
       </div>
       <div class="govuk-grid-column-one-third">
