--- a/app/views/apps/_assessment_2205/views/index.html
+++ b/app/views/apps/_assessment_2205/views/index.html
@@ -17,7 +17,7 @@
       <div class="govuk-grid-column-two-thirds">
           <div class="hgroup">
         <h1 class="govuk-heading-xl">
-          Report on ODA activity and financial data<span class="sr-only">(ROODAAF)</span>
+          Report ODA activity and financial data<span class="sr-only">(ROODAAF)</span>
               </h1>
   <p>This service is for organisations that either receive or report ODA for DfID.</p>
   <p>Use this service to:</p>
