--- a/app/views/apps/_assessment_2205/views/partner/projects/activity/add/index.html
+++ b/app/views/apps/_assessment_2205/views/partner/projects/activity/add/index.html
@@ -18,7 +18,7 @@
 
       <div class="govuk-form-group">
         <label class="govuk-label" for="address-line-2">
-          Activity name (h3)
+          Sub-activity name (h3)
         </label>
         <input class="govuk-input" id="address-line-2" name="address-line-2" type="text">
       </div>
@@ -478,7 +478,7 @@
 
       <div class="govuk-form-group">
         <label class="govuk-label" for="address-line-2">
-          Activity name (h3)
+          Sub-activity name (h3)
         </label>
         <input class="govuk-input" id="address-line-2" name="address-line-2" type="text">
       </div>
@@ -854,49 +854,49 @@
         <label class="govuk-label" for="address-postcode">
           Expected duration
         </label>
-        <input class="govuk-input" id="address-postcode" name="address-postcode" type="text">
+        <input class="govuk-input govuk-input--width-3" id="address-postcode" name="address-postcode" type="text">
       </div>
 
       <div class="govuk-form-group">
         <label class="govuk-label" for="address-postcode">
           Total application to UK
         </label>
-        <input class="govuk-input" id="address-postcode" name="address-postcode" type="text">
+        <input class="govuk-input govuk-input--width-3" id="address-postcode" name="address-postcode" type="text">
       </div>
 
       <div class="govuk-form-group">
         <label class="govuk-label" for="address-postcode">
           Total awards by UK
         </label>
-        <input class="govuk-input" id="address-postcode" name="address-postcode" type="text">
+        <input class="govuk-input govuk-input--width-3" id="address-postcode" name="address-postcode" type="text">
       </div>
 
       <div class="govuk-form-group">
         <label class="govuk-label" for="address-postcode">
           Total applications to partner
         </label>
-        <input class="govuk-input" id="address-postcode" name="address-postcode" type="text">
+        <input class="govuk-input govuk-input--width-3" id="address-postcode" name="address-postcode" type="text">
       </div>
 
       <div class="govuk-form-group">
         <label class="govuk-label" for="address-postcode">
           Total awards by partners
         </label>
-        <input class="govuk-input" id="address-postcode" name="address-postcode" type="text">
+        <input class="govuk-input govuk-input--width-3" id="address-postcode" name="address-postcode" type="text">
       </div>
 
       <div class="govuk-form-group">
         <label class="govuk-label" for="address-postcode">
           Partner Resource Committed (£)
         </label>
-        <input class="govuk-input" id="address-postcode" name="address-postcode" type="text">
+        <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
       </div>
 
       <div class="govuk-form-group">
         <label class="govuk-label" for="address-postcode">
           Partner Resource Actual (£)
         </label>
-        <input class="govuk-input" id="address-postcode" name="address-postcode" type="text">
+        <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
       </div>
 
       <div class="govuk-form-group hide">
