--- a/app/views/apps/_assessment_2205/views/partner/projects/index.html
+++ b/app/views/apps/_assessment_2205/views/partner/projects/index.html
@@ -11,7 +11,9 @@
       Activity (h2) added
     </h1>
     <div class="govuk-panel__body">
-      New activity (h2) ID is GB-GOV-13-91116<br>You can now <a href="activity/add/index.html"><strong>add sub-activities (h3)</strong></a> to this activity (h2)
+      You can now <a href="activity/add/index.html"><strong>add sub-activities (h3)</strong></a> to this activity (h2)<br/><br/>
+      New activity (h2) reference ID is GB-GOV-13-91116
+      <p style="color: white; padding: 15px 0 0; font-size: 18px; margin:0;" class="govuk-body">Use this ID as your unique reference when reporting financial data for this activity</p>
     </div>
   </div>
 
@@ -20,7 +22,9 @@
       Sub-activity (h3) added
     </h1>
     <div class="govuk-panel__body">
-      New sub-activity (h3) ID is GB-GOV-13-91116<br>You can now <a href="../trackers/index.html"><strong>report financial data</strong></a> for this activity (h3)
+      You can now <a href="../trackers/index.html"><strong>report financial data</strong></a> for this sub-activity (h3)<br/><br/>
+      New sub-activity (h3) ID is GB-GOV-13-91116
+      <p style="color: white; padding: 15px 0 0; font-size: 18px; margin:0;" class="govuk-body">Use this ID as your unique reference when reporting financial data for this activity</p>
     </div>
   </div>
 
@@ -46,7 +50,7 @@
 							<div class="subsection__header">
 
                 <h2 class="subsection__title">
-                  <button class="subsection__button js-subsection-button" aria-expanded="false" aria-controls="subsection_content_0">UKRI GCRF Collective Programme</button>
+                  <button class="subsection__button js-subsection-button" aria-expanded="false" aria-controls="subsection_content_0">Early Child Development Fund</button>
                 </h2>
 								<!-- <p class="subsection__description">Short sentence describing category.</p> -->
 							<span class="subsection__icon"></span></div>
@@ -56,7 +60,11 @@
                   <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
                       <th class="govuk-table__header" scope="row">Activity name (h1)</th>
-                      <td class="govuk-table__cell">UKRI GCRF Collective Programme</td>
+                      <td class="govuk-table__cell">Early Child Development Fund</td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                      <th class="govuk-table__header" scope="row">Fund</th>
+                      <td class="govuk-table__cell">GCRF</td>
                     </tr>
                     <tr class="govuk-table__row">
                       <th class="govuk-table__header" scope="row">Activity ID (h1)</th>
@@ -95,7 +103,7 @@
                   <thead class="govuk-table__head">
                     <tr class="govuk-table__row">
                       <th class="govuk-table__header" scope="col">Activity name</th>
-                      <th class="govuk-table__header" scope="col">Activity ID (h3)</th>
+                      <th class="govuk-table__header" scope="col">Sub-activity ID (h3)</th>
                       <th class="govuk-table__header" scope="col">Countries</th>
                       <th class="govuk-table__header" scope="col">Status</th>
                       <th class="govuk-table__header" scope="col"></th>
@@ -106,6 +114,7 @@
                     <td class="govuk-table__cell" scope="row">GB-GOV-13-91116</td>
                     <td class="govuk-table__cell">Morroco</td>
                     <td class="govuk-table__cell">Live</td>
+                    <td class="govuk-table__cell"><a href="activity/details.html">Duplicate</a></td>
                     <td class="govuk-table__cell"><a href="activity/details.html">Details</a></td>
                   </tr>
                   <tr class="govuk-table__row">
@@ -113,6 +122,7 @@
                     <td class="govuk-table__cell" scope="row">GB-GOV-13-91116</td>
                     <td class="govuk-table__cell">Morroco</td>
                     <td class="govuk-table__cell">Live</td>
+                    <td class="govuk-table__cell"><a href="activity/details.html">Duplicate</a></td>
                     <td class="govuk-table__cell"><a href="activity/details.html">Details</a></td>
                   </tr>
                   <tr class="govuk-table__row">
@@ -120,16 +130,17 @@
                     <td class="govuk-table__cell" scope="row">GB-GOV-13-91116</td>
                     <td class="govuk-table__cell">Morroco</td>
                     <td class="govuk-table__cell">Live</td>
+                    <td class="govuk-table__cell"><a href="activity/details.html">Duplicate</a></td>
                     <td class="govuk-table__cell"><a href="activity/details.html">Details</a></td>
                   </tr>
                 </table>
-                <a class="govuk-button govuk-button--secondary" href="activity/add/index">Add an activity (h3)</a>
+                <a class="govuk-button govuk-button--secondary" href="activity/add/index">Add an sub-activity (h3)</a>
 							</div>
 						</div>
             <div class="js-subsection subsection">
 							<div class="subsection__header">
 								<h2 class="subsection__title">
-                  <button class="subsection__button js-subsection-button" aria-expanded="false" aria-controls="subsection_content_0">Global Challenges Research Fund</button>
+                  <button class="subsection__button js-subsection-button" aria-expanded="false" aria-controls="subsection_content_0">Education as a driver of sustainable development</button>
                 </h2>
 								<!-- <p class="subsection__description">Short sentence describing category.</p> -->
 							<span class="subsection__icon"></span></div>
@@ -138,7 +149,11 @@
                                   <tbody class="govuk-table__body">
                                     <tr class="govuk-table__row">
                                       <th class="govuk-table__header" scope="row">Activity name (h1)</th>
-                                      <td class="govuk-table__cell">Global Challenges Research Fund</td>
+                                      <td class="govuk-table__cell">Education as a driver of sustainable development</td>
+                                    </tr>
+                                    <tr class="govuk-table__row">
+                                      <th class="govuk-table__header" scope="row">Fund</th>
+                                      <td class="govuk-table__cell">GCRF</td>
                                     </tr>
                                     <tr class="govuk-table__row">
                                       <th class="govuk-table__header" scope="row">Activity ID (h1)</th>
@@ -172,7 +187,7 @@
                     <td class="govuk-table__cell"><a href="details?hasActivity=1">Details</a></td>
                   </tr>
                 </tbody></table>
-                <div class="govuk-inset-text">You have no activities (h3) listed for this project. <a href="#">Add an activity (h3)</a> to report financial data.</div>
+                <div class="govuk-inset-text">You have no sub-activities (h3) listed for this project. <a href="#">Add an activity (h3)</a> to report financial data.</div>
                 <a class="govuk-button govuk-button--secondary" href="activity/add/index">Add an activity</a>
 							</div>
 						</div>
