--- a/app/views/apps/_assessment_2205/views/partner/trackers/index.html
+++ b/app/views/apps/_assessment_2205/views/partner/trackers/index.html
@@ -16,13 +16,13 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
         <!-- <h3 class="govuk-heading-m">This period's tracker status</h3> -->
-        <h3 class="govuk-heading-m">Report status</h3>
+        <h3 class="govuk-heading-m">Submission status</h3>
         <p class="govuk-body">Shows imporant information pertaining to your financial data submission.</p>
         <div class="govuk-grid-row govuk-form-group">
 
           <div class="govuk-grid-column-one-third">
             <div class="panel-blue">
-                <div class="govuk-caption-m">Tracker submission deadline</div>
+                <div class="govuk-caption-m">Submission deadline</div>
                 <div class="govuk-heading-m">Friday, 28 Jun 2019</div>
             </div>
               </div>
@@ -34,7 +34,7 @@
               </div>
               <div class="govuk-grid-column-one-third">
                 <div class="panel-red">
-                <div class="govuk-caption-m">Errors found in tracker</div>
+                <div class="govuk-caption-m">Errors found in submission</div>
                 <div class="govuk-heading-m">4,305</div>
                 </div>
               </div>
@@ -65,7 +65,7 @@
         </div>
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-<h2 class="govuk-heading-m">Tracker archive</h2>
+<h2 class="govuk-heading-m">Submissions archive</h2>
 <table class="govuk-table govuk-table--small">
 
   <thead class="govuk-table__head">
