--- a/app/views/apps/_assessment_2205/views/partner/trackers/submit/file-upload/success.html
+++ b/app/views/apps/_assessment_2205/views/partner/trackers/submit/file-upload/success.html
@@ -9,10 +9,10 @@
 
     <div class="govuk-panel govuk-panel--confirmation">
       <h1 class="govuk-panel__title">
-        Financial tracker spreadsheet successfully submitted
+        Financial data has been successfully submitted
       </h1>
       <div class="govuk-panel__body">
-        Keep this reference number<br><strong>HDJ2123F</strong> for your records.
+        Keep this reference number<br><strong>HDJ2123F</strong> as proof of your submission.
       </div>
     </div>
     <div class="govuk-grid-row">
