--- a/app/views/apps/_assessment_2205/views/partner/trackers/submit/input.html
+++ b/app/views/apps/_assessment_2205/views/partner/trackers/submit/input.html
@@ -125,7 +125,7 @@
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="organisation-4" name="organisation" type="checkbox" value="DfT">
                   <label class="govuk-label govuk-checkboxes__label" for="organisation-4">
-                    Activity (h3)
+                    Sub-activity (h3)
                   </label> </div>
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="organisation-4" name="organisation" type="checkbox" value="DfT">
@@ -147,7 +147,7 @@
     </div>
   </div>
 
-       <a class="govuk-button" href="submit-tracker">Submit tracker</a>
+       <a class="govuk-button" href="file-upload/verify-clean.html">Submit</a>
 
 </aside>
 <div class="govuk-grid-column-two-thirds main">
