--- a/app/views/apps/_assessment_2205/views/partner/trackers/submit/success.html
+++ b/app/views/apps/_assessment_2205/views/partner/trackers/submit/success.html
@@ -9,7 +9,7 @@
 
     <div class="govuk-panel govuk-panel--confirmation">
       <h1 class="govuk-panel__title">
-        Tracker successfully submitted
+        Your submission has been sent
       </h1>
       <div class="govuk-panel__body">
         Your reference number<br><strong>HDJ2123F</strong>
