--- a/app/views/apps/_assessment_2205/views/beis/trackers/tracker/complete-review.html
+++ b/app/views/apps/_assessment_2205/views/beis/trackers/tracker/complete-review.html
@@ -11,25 +11,25 @@
             Complete review
           </h1>
         </legend>
-        <span id="how-contacted-conditional-hint" class="govuk-hint">
-          Is this tracker ready for BEIS QA?
+        <span id="how-contacted-conditional-hint" class="govuk-hint hide">
+          Is this submission ready for BEIS QA?
         </span>
         <div class="govuk-radios govuk-radios--conditional" data-module="radios">
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="approve" name="choose-journey" type="radio" value="approve">
             <label class="govuk-label govuk-radios__label" for="approve">
-              yes, approve this tracker and notify BEIS analysts
+              yes, approve this submission
             </label> </div>
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="decline" name="choose-journey" type="radio" value="decline">
             <label class="govuk-label govuk-radios__label" for="decline">
-              no, send the tracker back to the delivery partner to fix
+              no, send the submission back to the delivery partner to fix
             </label> </div>
           <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-how-contacted-conditional-2">
             <div class="govuk-form-group">
             <div class="word-count">
               <label class="govuk-label" for="contact-by-phone">
-                Add feedback
+                Add overall feedback
               </label>            <textarea class="govuk-textarea govuk-!-width-one-half" type="text" id="wordlimit" data-max-length-in-words="50"></textarea>
             </div>
             </div>
