--- a/app/views/apps/_assessment_2205/views/partner/dashboard.html
+++ b/app/views/apps/_assessment_2205/views/partner/dashboard.html
@@ -4,7 +4,7 @@
   <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
           <div class="hgroup">
-            <h1 class="govuk-heading-xl">Report on ODA activity and financial data</h1>
+            <h1 class="govuk-heading-xl">Report ODA activity and financial data</h1>
             <!-- <p class="govuk-body-lead">Use this page to navigate towards tasks you need to complete.</p> -->
           </div>
     </div>
@@ -13,25 +13,26 @@
    <div class="govuk-grid-row">
      <div class="govuk-grid-column-two-thirds">
 
-      <h2 class="govuk-heading-m"><a href="trackers/">Financial data</a></h2>
+       <h2 class="govuk-heading-m"><a href="projects/index">Activities</a></h2>
+       <p class="govuk-body">Create, read or update your activities.</p>
+       <details class="govuk-details">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">What are activities?</span>
+        </summary>
+      <div class="govuk-details__text">
+        <p class="govuk-body">The language used to describe things such as programmes, grants and calls varies across organisations. We use the following definitions:
+          <h3 class="govuk-heading-s">Programmes</h3>
+          <p class="govuk-body">Programmes are the aims or subject areas that funds like Newton and GCRF raise funding against. Calls to tender are made under these headings for delivery partners to deliver agianst.</p>
+          <h3 class="govuk-heading-s">Projects</h3>
+          <p class="govuk-body">Projects are the initiatives that feed into the programme. They are operated by delivery partners who issue calls to tender activities against these projects.</p>
+          <h3 class="govuk-heading-s">Activites</h3>
+          <p class="govuk-body">Activities represent the end of the supply chain spending. Activities have a principal investigator who delivers against the funding project and programme goals.</p>
+        </div>
+       </details>
+
+      <h2 class="govuk-heading-m"><a href="trackers/index">Financial data</a></h2>
       <p class="govuk-body">Update and report your ODA financial data.</p>
 
-     <h2 class="govuk-heading-m"><a href="projects/">Activities</a></h2>
-     <p class="govuk-body">Create, read or update your activities.</p>
-     <details class="govuk-details">
-      <summary class="govuk-details__summary">
-        <span class="govuk-details__summary-text">What are activities?</span>
-      </summary>
-    <div class="govuk-details__text">
-      <p class="govuk-body">The language used to describe things such as programmes, grants and calls varies across organisations. We use the following definitions:
-        <h3 class="govuk-heading-s">Programmes</h3>
-        <p class="govuk-body">Programmes are the aims or subject areas that funds like Newton and GCRF raise funding against. Calls to tender are made under these headings for delivery partners to deliver agianst.</p>
-        <h3 class="govuk-heading-s">Projects</h3>
-        <p class="govuk-body">Projects are the initiatives that feed into the programme. They are operated by delivery partners who issue calls to tender activities against these projects.</p>
-        <h3 class="govuk-heading-s">Activites</h3>
-        <p class="govuk-body">Activities represent the end of the supply chain spending. Activities have a principal investigator who delivers against the funding project and programme goals.</p>
-      </div>
-     </details>
      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
      <h3 class="govuk-heading-m">Administration</h3>
