--- a/app/views/apps/_assessment_2205/views/partner/projects/activity/add/check-answers.html
+++ b/app/views/apps/_assessment_2205/views/partner/projects/activity/add/check-answers.html
@@ -52,7 +52,7 @@
   <dl class="govuk-summary-list govuk-!-margin-bottom-9">
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">
-        Activity name (h3)
+        Sub-activity name (h3)
       </dt>
       <dd class="govuk-summary-list__value">
         Shoreline reinforcement
